# kosmicengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
Docs/pt_BR/: README.md
Engine/: CMakeLists.txt
Engine/include/Kosmic/Assets/: Material.hpp  Model.hpp
Engine/include/Kosmic/Core/: Application.hpp  Input.hpp  Logging.hpp
Engine/include/Kosmic/Core/Math/: Math.hpp
Engine/include/Kosmic/ECS/: ECS.hpp
Engine/include/Kosmic/Renderer/: Camera.hpp  Framebuffer.hpp  Lighting.hpp  Mesh.hpp  OpenGLRendererAPI.hpp  RenderGraph.hpp  Renderer3D.hpp  RendererAPI.hpp  Shader.hpp  StateManager.hpp  Texture.hpp
Engine/src/Assets/: Material.cpp  Model.cpp
Engine/src/Core/: Application.cpp  Input.cpp
Engine/src/Renderer/: Camera.cpp  Framebuffer.cpp  Mesh.cpp  OpenGLRendererAPI.cpp  Renderer3D.cpp  Shader.cpp  Texture.cpp
Examples/: CMakeLists.txt
Examples/Pong/: CMakeLists.txt
Examples/Pong/src/: main.cpp
Examples/Sandbox/src/: main.cpp
Resources/Shaders/: basic.frag  basic.vert  sky.frag  sky.vert
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
